results/SpecGenBench/4-shot/log-LargestPerimeter-2023_11_05_03_52_01.txt
import java.util.Arrays;

class LargestPerimeter {
    //@ requires A != null;
    //@ ensures \result >= 0;
    //@ ensures \result == 0 <==> (\forall int i; 0 <= i && i < A.length; A[i] <= 0);
    //@ ensures \result > 0 <==> (\exists int i; 0 <= i && i < A.length; A[i] > 0) && (\forall int i; 0 <= i && i < A.length; A[i] <= 0) && (\forall int i; 0 <= i && i < A.length; A[i] <= \result);
    public int largestPerimeter(int[] A) {
        Arrays.sort(A);
        for (int i = A.length - 1; i >= 2; --i) {
            //@ invariant 2 <= i+1 && i+1 <= A.length;
            //@ invariant (\forall int j; i+1 <= j && j < A.length; A[j] <= A[i+1]);
            //@ invariant (\forall int j; 0 <= j && j < i+1; A[j] <= A[i+1]);
            //@ invariant (\forall int j; 0 <= j && j < i+1; A[j] <= A[i]);
            //@ invariant (\forall int j; i+1 <= j && j < A.length; A[j] <= A[i]);
            if (A[i - 2] + A[i - 1] > A[i]) {
                return A[i - 2] + A[i - 1] + A[i];
            }
        }
        return 0;
    }
}
/home/max/Documents/JMLGPT/tmp/LargestPerimeter.java:11: error: not a statement
            //@ invariant 2 <= i+1 && i+1 <= A.length;
                ^
/home/max/Documents/JMLGPT/tmp/LargestPerimeter.java:11: error: ';' expected
            //@ invariant 2 <= i+1 && i+1 <= A.length;
                         ^
/home/max/Documents/JMLGPT/tmp/LargestPerimeter.java:11: error: not a statement
            //@ invariant 2 <= i+1 && i+1 <= A.length;
                                   ^
/home/max/Documents/JMLGPT/tmp/LargestPerimeter.java:11: error: Expected a declaration or a JML construct inside the JML annotation here
            //@ invariant 2 <= i+1 && i+1 <= A.length;
                               ^
/home/max/Documents/JMLGPT/tmp/LargestPerimeter.java:15: error: The type or expression near here is invalid (or not implemented): ( token ? in JmlParser.term3())
            //@ invariant (\forall int j; i+1 <= j && j < A.length; A[j] <= A[i]);
                                                                                  ^
5 errors

